--- a/src/app/components/student/student.component.html
+++ b/src/app/components/student/student.component.html
@@ -1,6 +1,4 @@
-<h1>student works</h1>
-
-<!-- 
+<!-- <h1>student works</h1>
 <div class="row">
     <div class="col-4">
         <button (click)="getAllStudent()"> Get All Student</button>
